--- a/src/components/FiltersGroup/index.css
+++ b/src/components/FiltersGroup/index.css
@@ -2,6 +2,81 @@
   margin-top: 16px;
 }
 
+/* Write your CSS here */
+
+.search-input-container{
+  display: flex;
+  align-items: center;
+  background-color: #f1f5f9;
+  padding: 10px;
+  border-radius: 8px;
+}
+.search-input{
+  background-color: transparent;
+  border: none;
+  outline: none;
+  width: 100%;
+  cursor: pointer;
+}
+.search-button{
+  background-color: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+.search-icon{
+  width: 20px;
+  height: 20px;
+}
+.category,.star-rating {
+  font-family: 'Roboto';
+  font-size: 20px;
+  color: #12022f;
+  font-weight: 800;
+  line-height: 2px;
+}
+.category-options-list,.ratings-list{
+  margin: 0;
+  list-style-type: none;
+  padding: 0;
+}
+.category-item,.rating-item{
+  padding: 5px 0;
+}
+.category-btn,.rating-btn {
+  background-color: transparent;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  font-family: 'Roboto';
+  font-size: 18px;
+  color: #64748b;
+}
+.up {
+  line-height: 0;
+}
+.stars-icon {
+  margin: 0 20px 0 0;
+  width: 120px;
+}
+.clear-filter-btn {
+  background-color: transparent;
+  border: 1px solid #0967d2;
+  outline: none;
+  cursor: pointer;
+  padding: 8px 20px;
+  margin: 10px 0;
+  border-radius: 10px;
+  font-size: 18px;
+  font-weight: bold;
+  color: #0967d2;
+}
+.active {
+  color: #0967d2;
+}
 @media screen and (min-width: 768px) {
   .filters-group-container {
     width: 30%;
@@ -9,6 +84,10 @@
     margin-top: 48px;
     flex-shrink: 0;
   }
+  .category {
+    font-size: 30px;
+  }
+  .category-btn,.rating-btn {
+    font-size: 24px;
+  }
 }
-
-/* Write your CSS here */
